# skills

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE.md  LOG.md  PRD.md  README.md
.github/workflows/: release-skills.yml
docs/: README.md  agent-skills-specification.md  prd.md  testing-agent-skills-with-evals.md
evals/: README.md
evals/_template/: checks.md  prompts.csv
evals/ipa/: evals.json
evals/istat-sdmx-explorer/: checks.md  prompts.csv
evals/open-data-quality/: checks.md  prompts.csv
evals/open-data-quality/fixtures/: test_aggregate_rows.csv  (+7 more)
evals/openalex/: checks.md  evals.json  prompts.csv  rubric.schema.json  run_evals.sh
notes/: README.md  ipa.md  openalex.md
skills/cup-cig/: PLAN.md  SKILL.md
skills/data-quality-csv/: SKILL.md
skills/ipa/: SKILL.md
skills/istat-sdmx-explorer/: SKILL.md
skills/open-data-quality/: SKILL.md
skills/open-data-quality/scripts/: .gitignore  README.md  pyproject.toml
skills/open-data-quality/scripts/src/open_data_quality/: cli_ckan.py  cli_csv.py  csv_validator.py  metadata_validator.py  models.py  portal_field_aliases.json  reporter.py
skills/open-data-quality/scripts/tests/: conftest.py  test_cli.py  test_metadata.py  test_phase0.py  test_phase1.py  test_phase2.py  test_phase3.py
skills/open-data-quality/scripts/tests/fixtures/: aggregate_rows.csv  bom.csv  comma_decimal.csv  datetime_col.csv  duplicate_cols.csv  duplicate_rows.csv  fuzzy_duplicates.csv  non_iso_date.csv  ok.csv  outlier_values.csv  placeholder.csv  wide_months.csv  wide_years.csv
skills/openalex/: SKILL.md
tasks/: todo.md
(+8 files in other folders)
