[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "open-data-quality"
version = "0.1.0"
description = "Open data quality validator for CSV files and CKAN portals (DCAT-AP)"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.0.0",
    "charset-normalizer>=3.0.0",
    "httpx>=0.27.0",
    "rich>=13.0.0",
    "typer>=0.12.0",
]

[project.scripts]
odq-csv  = "open_data_quality.cli_csv:app"
odq-ckan = "open_data_quality.cli_ckan:app"

[tool.setuptools.packages.find]
where = ["src"]
